--- a/app/src/main/res/drawable/custom_dialog_bg.xml
+++ b/app/src/main/res/drawable/custom_dialog_bg.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="#D1BDEA"
+        android:startColor="@color/orange_weak"
         android:centerColor="@color/white"
-        android:endColor="#F4F3F7"
+        android:endColor="@color/white"
         android:type="linear"
         android:angle="135"/>
     <corners
         android:radius="30dp"
+        />
+    <stroke
+        android:color="@color/orange_weak"
+        android:width="2dp"
         />
 
 </shape>
