--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,20 @@
     android:layout_gravity="center"
     tools:context="ui.home.HomeFragment">
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textColor="@color/black"
+        android:text="token"
+        android:gravity="center"
+        android:textSize="24dp"
+        android:id="@+id/textviewtoken"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/mylist_toolbar"
         android:layout_width="match_parent"
@@ -51,5 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
