--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -192,6 +192,7 @@
         android:orientation="horizontal"
         app:constraint_referenced_ids="register_suggestion,register_goto_link"
         app:flow_wrapMode="aligned"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
