--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,4 +18,19 @@
         android:gravity="center"
         android:text="@string/hello_blank_fragment" />
 
+    <TextView
+        android:layout_marginBottom="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text="@string/app_v_textview" />
+    <TextView
+        android:id="@+id/appVersionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text="@string/application_version" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
